Fixed icons jumping down on smaller screens

--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@ nav{
     font-weight: bold;
     font-size: 14px;
     padding-top: 15px;
+    display: inline-block;
 }
 
 nav a{
@@ -151,7 +152,7 @@ nav a{
   float:right;
 }
 .social-icons{
-    margin-top: 110px;
+    margin: 10px 25px 0px 0px;
 }
 .social-icons a{
     margin:0px 7px;
